responsev phone,done

--- a/index.html
+++ b/index.html
@@ -16,40 +16,17 @@
     <header>
         <div class="header-bg">
             <section>
-                <div class="container">
-                    <div class="section1-header">
-                        <div class="section1-logo">
-                            <img src="./images/svg/logo.svg" alt="logo">
-                        </div>
-                        <div class="section1-navigation">
-                            <nav>
-                                <ul class="header-nav-description">
-                                    <li class="header-nav-descriptions">
-                                        <a class="active" id="#" href="">Home</a>
-                                    </li>
-                                    <li class="header-nav-descriptions">
-                                        <a id="#" href="#">About</a>
-                                    </li>
-                                    <li class="header-nav-descriptions">
-                                        <a id="#" href="#">Contacts</a>
-                                    </li>
-                                </ul>
-                            </nav>
-                        </div>
-                        <div class="container mobile-navigation">
-                            <nav>
-                                <input type="checkbox" id="check" style="display: none;">
-                                <label for="check" class="checkbtn">
-                                    <svg style="width: 20px; height:20px;" fill="white"
-                                        xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-                                        <path
-                                            d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z" />
-                                    </svg>
-                                </label>
-                                <div class="nav-mobile">
-                                    <ul class="nav-mobile-descriptions">
+                <div class="bg-opacity">
+                    <div class="container">
+                        <div class="section1-header">
+                            <div class="section1-logo">
+                                <img src="./images/svg/logo.svg" alt="logo">
+                            </div>
+                            <div class="section1-navigation">
+                                <nav>
+                                    <ul class="header-nav-description">
                                         <li class="header-nav-descriptions">
-                                            <a class="active" id="#" href="#">Home</a>
+                                            <a class="active" id="#" href="">Home</a>
                                         </li>
                                         <li class="header-nav-descriptions">
                                             <a id="#" href="#">About</a>
@@ -58,8 +35,33 @@
                                             <a id="#" href="#">Contacts</a>
                                         </li>
                                     </ul>
-                                </div>
-                            </nav>
+                                </nav>
+                            </div>
+                            <div class="mobile-navigation">
+                                <nav>
+                                    <input type="checkbox" id="check" style="display: none;">
+                                    <label for="check" class="checkbtn">
+                                        <svg style="width: 20px; height:20px;" fill="white"
+                                            xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                                            <path
+                                                d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z" />
+                                        </svg>
+                                    </label>
+                                    <div class="nav-mobile">
+                                        <ul class="nav-mobile-descriptions">
+                                            <li class="header-nav-descriptions">
+                                                <a class="active" id="#" href="#">Home</a>
+                                            </li>
+                                            <li class="header-nav-descriptions">
+                                                <a id="#" href="">About</a>
+                                            </li>
+                                            <li class="header-nav-descriptions">
+                                                <a id="#" href="#">Contacts</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </nav>
+                            </div>
                         </div>
                     </div>
                 </div>
