--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                                                 <a class="active" id="#" href="#">Home</a>
                                             </li>
                                             <li class="header-nav-descriptions">
-                                                <a id="#" href="">About</a>
+                                                <a id="#" href="#">About</a>
                                             </li>
                                             <li class="header-nav-descriptions">
                                                 <a id="#" href="#">Contacts</a>
