--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                 </nav>
                             </div>
                             <div class="mobile-navigation">
-                                <nav>
+                                <nav class="nav">
                                     <input type="checkbox" id="check" style="display: none;">
                                     <label for="check" class="checkbtn">
                                         <svg style="width: 20px; height:20px;" fill="white"
